Add gradient to top story

--- a/index.html
+++ b/index.html
@@ -49,23 +49,24 @@
   <main>
     <section class="top-stories">
       <div class="top-story-left top-story">
+        <div class="gradient"></div>
         <div class="logo-and-date">
-          <h1><img class="logo" src="https://cdn.worldvectorlogo.com/logos/the-next-web-tnw.svg"></h1>
+          <h1><img class="logo" src="logo.svg"></h1>
           <p>Thursday -- November 12, 2020</p>
         </div>
         <p>INSIGHTS</p>
         <h3>The new Chinese digital consumers your business needs to forget</h3>
-        <p>by Ashley Dudarenok <i></i> 4 hours ago <i></i> 8</p>
+        <p>by Ashley Dudarenok<i class="far fa-clock"></i>4 hours ago<i class="fas fa-share-alt"></i>8</p>
       </div>
       <div class="top-stories-right">
         <div class="top-story-top top-story">
           <p>INSIGHTS</p>
           <h3>Netflix signs David Fincher in a 4-year exclusive deal</h3>
-          <p>by Mix <i></i> 4 hours ago <i></i> 5</p>
+          <p>by Mix<i class="far fa-clock"></i>4 hours ago<i class="fas fa-share-alt"></i>5</p>
         </div>
         <div class="top-story-btm top-story">
           <h3>Inside the world's first AI-powered satellite - and its flight against clouds</h3>
-          <p>by Thomas Macaulay <i></i> 4 hours ago <i></i> 3</p>
+          <p>by Thomas Macaulay<i class="far fa-clock"></i>4 hours ago<i class="fas fa-share-alt"></i>3<p>
         </div>
       </div>
     </section>
